--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <!--Splash Screen-->
     <color name="bg_screen2">#1e88e5</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="test">#ffffe6</color>
 </resources>
